修复换源若干问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">搜书神器</string>
+    <string name="app_name">览阅</string>
     <string name="app_name_en">Reader</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
