--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,41 +5,39 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <string name="share">分享</string>
+    <string name="share_text">发现了一款非常好用的小说App「览阅」，绿色健康、无广告，而且完全开源不收费，实在是太赞了! 推荐~：https://github.com/zas023/NewBook</string>
 
     <!--read-->
     <string name="read_catalog_title">第 %1$d 章 %2$s</string>
 
-    <!--string_array start-->
+    <!--about-->
+    <string name="about_introduce">\t\t\t\t览阅致力于打造绿色健康、无广告的阅读平台，为广大读者提供优质健康的阅读服务。
+        \n\n\t\t\t\t数据内容来源于追书神器api和第三方网站，如有侵犯您的权益,请来信告知,我们将立即予以处理(联系方式：anshunzhou@outlook.com)。
+        \n\n\t\t\t\t项目采用MVP架构，使用流行的RxJava和Retrofit 框架等等，追求每个功能的最佳代码实现。
+        \n\n\t\t\t\t我的 GitHub: https://github.com/zas023
+        \n\n\t\t\t\t完全开源，最佳的源代码，最佳的学习软件，如果你觉得不错，可以帮忙分享给你更多的朋友，这是我们最大的动力和支持.
+    </string>
 
-    <!--首页fragment-->
-    <string-array name="fragment_title">
-        <item>@string/fragment_title_bookshelf</item>
-        <item>@string/fragment_title_store</item>
-        <item>@string/fragment_title_find</item>
-    </string-array>
+    <string name="about_license">\t\t\t\t当您搜索一本书的时，览阅会将该书的书名以关键词的形式提交到各个第三方网络文学网站。
+        各第三方网站返回的内容与览阅无关，览阅对其概不负责，亦不承担任何法律责任。
+        任何通过使用览阅而链接到的第三方网页均系他人制作或提供，您可能从第三方网页上获得其他服务， 览阅对其合法性概不负责，
+        亦不承担任何法律责任。 第三方搜索引擎结果根据您提交的书名自动搜索获得并提供试读，
+        不代表览阅赞成或被搜索链接到的第三方网页上的内容或立场。 您应该对使用搜索引擎的结果自行承担风险。
 
-    <!--榜单分类-->
-    <string-array name="fragment_bill_book">
-        <item>周榜</item>
-        <item>月榜</item>
-        <item>总榜</item>
-    </string-array>
+        \n\n\t\t\t\t览阅不做任何形式的保证：不保证第三方搜索引擎的搜索结果满足您的要求， 不保证搜索服务不中断，
+        不保证搜索结果的安全性、正确性、及时性、合法性。 因网络状况、通讯线路、第三方网站等任何原因而导致您不能正常使用览阅，
+        览阅不承担任何法律责任。览阅尊重并保护所有使用用户的个人隐私权， 您注册的用户名、电子邮件地址等个人资料，
+        非经您亲自许可或根据相关法律、法规的强制性规定， 览阅不会主动地泄露给第三方。
 
-    <!--CollBook的长按点击-->
-    <string-array name="menu_net_book">
-        <item>@string/menu_action_top</item>
-        <item>@string/menu_action_cache</item>
-        <item>@string/menu_action_delete</item>
-        <item>@string/menu_action_batch_manage</item>
-    </string-array>
+        \n\n\t\t\t\t览阅致力于最大程度地减少网络文学阅读者在自行搜寻过程中的无意义的时间浪费，
+        通过专业搜索展示不同网站中网络文学的最新章节。 览阅在为广大小说爱好者提供方便、快捷舒适的试读体验的同时，
+        也使优秀网络文学得以迅速、更广泛的传播，从而达到了在一定程度促进网络文学充分繁荣发展之目的。
 
-    <string-array name="menu_local_book">
-        <item>@string/menu_action_top</item>
-        <item>@string/menu_action_delete</item>
-        <item>@string/menu_action_batch_manage</item>
-    </string-array>
-
-    <!--string_array end-->
+        \n\n\t\t\t\t览阅鼓励广大小说爱好者通过览阅发现优秀网络小说及其提供商， 并建议购买和阅读正版图书。
+        任何单位或个人认为通过览阅搜索链接到的第三方网页内容可能涉嫌侵犯其信息网络传播权， 应该及时向览阅提出书面权力通知，
+        并提供身份证明、权属证明及详细侵权情况证明。 览阅在收到上述法律文件后，将会依法尽快断开相关链接内容。
+    </string>
 
     <!--通用-->
     <string name="common_tip">提示</string>
@@ -179,33 +177,5 @@
     <string name="user_info_phone">手机</string>
     <string name="user_info_email">邮箱</string>
     <string name="user_info_logout">退出</string>
-
-    <!--about-->
-    <string name="about_introduce">览阅致力于打造绿色健康、无广告的阅读平台，为广大读者提供优质健康的阅读服务。
-        \n\n数据内容来源于追书神器api和第三方网站，如有侵犯您的权益,请来信告知,我们将立即予以处理(联系方式：anshunzhou@outlook.com)。
-        \n\n项目采用MVP架构，使用流行的RxJava和Retrofit 框架等等，追求每个功能的最佳代码实现。
-        \n\n我的 GitHub: https://github.com/zas023
-        \n\n完全开源，最佳的源代码，最佳的学习软件，如果你觉得不错，可以帮忙分享给你更多的朋友，这是我们最大的动力和支持.
-    </string>
-
-    <string name="about_license">\t\t\t\t当您搜索一本书的时，览阅会将该书的书名以关键词的形式提交到各个第三方网络文学网站。
-        各第三方网站返回的内容与览阅无关，览阅对其概不负责，亦不承担任何法律责任。
-        任何通过使用览阅而链接到的第三方网页均系他人制作或提供，您可能从第三方网页上获得其他服务， 览阅对其合法性概不负责，
-        亦不承担任何法律责任。 第三方搜索引擎结果根据您提交的书名自动搜索获得并提供试读，
-        不代表览阅赞成或被搜索链接到的第三方网页上的内容或立场。 您应该对使用搜索引擎的结果自行承担风险。
-
-        \n\n\t\t\t\t览阅不做任何形式的保证：不保证第三方搜索引擎的搜索结果满足您的要求， 不保证搜索服务不中断，
-        不保证搜索结果的安全性、正确性、及时性、合法性。 因网络状况、通讯线路、第三方网站等任何原因而导致您不能正常使用览阅，
-        览阅不承担任何法律责任。览阅尊重并保护所有使用用户的个人隐私权， 您注册的用户名、电子邮件地址等个人资料，
-        非经您亲自许可或根据相关法律、法规的强制性规定， 览阅不会主动地泄露给第三方。
-
-        \n\n\t\t\t\t览阅致力于最大程度地减少网络文学阅读者在自行搜寻过程中的无意义的时间浪费，
-        通过专业搜索展示不同网站中网络文学的最新章节。 览阅在为广大小说爱好者提供方便、快捷舒适的试读体验的同时，
-        也使优秀网络文学得以迅速、更广泛的传播，从而达到了在一定程度促进网络文学充分繁荣发展之目的。
-
-        \n\n\t\t\t\t览阅鼓励广大小说爱好者通过览阅发现优秀网络小说及其提供商， 并建议购买和阅读正版图书。
-        任何单位或个人认为通过览阅搜索链接到的第三方网页内容可能涉嫌侵犯其信息网络传播权， 应该及时向览阅提出书面权力通知，
-        并提供身份证明、权属证明及详细侵权情况证明。 览阅在收到上述法律文件后，将会依法尽快断开相关链接内容。
-    </string>
 
 </resources>
