--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,25 @@
     <string name="share">分享</string>
     <string name="share_text">发现了一款非常好用的小说App「览阅」，绿色健康、无广告，而且完全开源不收费，实在是太赞了! 推荐~：https://github.com/zas023/NewBook</string>
 
+    <!--activity-->
+    <string name="activity_source">书源管理</string>
+    <string name="activity_download">下载管理</string>
+    <string name="activity_replace">替换管理</string>
+    <string name="activity_setting">设置</string>
+    <string name="activity_about">关于</string>
+
+
+    <!--store-->
+    <string name="store_node_nsrm">男生热门</string>
+    <string name="store_node_nsza">女生最爱</string>
+    <string name="store_node_nswb">男生完本</string>
+    <string name="store_node_nswj">女生完结</string>
+    <string name="store_node_nsdsq">男生大神区</string>
+    <string name="store_node_nshwq">女生红文区</string>
+    <string name="store_node_npxm">男频推荐</string>
+    <string name="store_node_nvpxm">女频推荐</string>
+
+
     <!--read-->
     <string name="read_catalog_title">第 %1$d 章 %2$s</string>
 
@@ -54,128 +73,5 @@
     <string name="fragment_title_find">发现</string>
     <string name="fragment_title_community">社区</string>
 
-
-    <!--discover 发现-->
-    <string name="fragment_discover_top">排行榜</string>
-    <string name="fragment_discover_topic">主题书单</string>
-    <string name="fragment_discover_sort">分类</string>
-
-    <!--dialog 对话框-->
-    <string name="dialog_text_introduce">我们会根据您的喜好\n推荐相对应的小说</string>
-    <string name="dialog_text_choose_tip">--请选择你的喜好--</string>
-    <string name="dialog_text_boy_story">男生小说</string>
-    <string name="dialog_text_girl_story">女生小说</string>
-
-    <!--menu 菜单-->
-    <string name="menu_action_search">搜索</string>
-    <string name="menu_action_login">请登录</string>
-    <string name="menu_action_message">我的消息</string>
-    <string name="menu_action_download">下载列表</string>
-    <string name="menu_action_sync">同步书架</string>
-    <string name="menu_action_scan">扫描本地书籍</string>
-    <string name="menu_action_transfer">WIFI传书</string>
-    <string name="menu_action_feedback">意见反馈</string>
-    <string name="menu_action_about">关于</string>
-    <string name="menu_action_night_mode">夜间模式</string>
-    <string name="menu_action_setting">设置</string>
-
-    <string name="menu_action_top">置顶</string>
-    <string name="menu_action_cache">缓存</string>
-    <string name="menu_action_delete">删除</string>
-    <string name="menu_action_batch_manage">批量管理</string>
-
-    <!--Splash-->
-    <string name="splash_skip">跳过</string>
-
-    <!--book:书籍的信息-->
-    <string name="book_type">[%1$s]</string>
-    <string name="book_recommend">%1$d 人推荐</string>
-    <string name="book_message">%1$d人加入书架 |&#160; %2$s%%读者留存</string>
-    <string name="book_word_count">%1$d&#160;万字</string>
-
-    <!--sort:每类的书-->
-    <string name="sort_book_count">%1$d 本</string>
-
-    <!--tag: 标签-->
-    <string name="tag_all">全部</string>
-    <string name="tag_sex">性别</string>
-    <string name="tag_boy">男生</string>
-    <string name="tag_girl">女生</string>
-
-    <!--load:加载-->
-    <string name="load_msg">正在加载</string>
-
-    <!--book_detail : -->
-    <string name="book_detail_last_chapter">最新章</string>
-    <string name="book_detail_recommend_books">推荐书籍</string>
-    <string name="book_detail_recommend_book_list">推荐书单</string>
-    <string name="book_detail_open_book">打开阅读</string>
-    <string name="book_detail_go_on">继续阅读</string>
-    <string name="book_detail_give_up">移出书架</string>
-    <string name="book_detail_add_bookcase">加入书架</string>
-    <string name="book_detail_download_book">缓存全本</string>
-
-    <!--DownloadTask:书籍下载-->
-    <string name="download_add_succeed">成功添加到下载列表</string>
-    <string name="download_exist">该任务已存在</string>
-    <string name="download_load_all">已缓存全部章节</string>
-    <string name="download_progress">%1$d/%2$d</string>
-    <string name="download_chapter_scope">(%1$d-%2$d章)</string>
-
-    <string name="download_start">继续</string>
-    <string name="download_pause">暂停</string>
-    <string name="download_wait">等待</string>
-    <string name="download_error">错误</string>
-    <string name="download_finish">完成</string>
-
-    <string name="download_loading">下载中</string>
-    <string name="download_waiting">等待中</string>
-    <string name="download_pausing">暂停中</string>
-    <string name="download_complete">已完成</string>
-    <string name="download_source_error">资源或网络错误</string>
-
-    <!--mode-->
-    <string name="mode_night">夜间</string>
-    <string name="mode_light">日间</string>
-
-    <!--read-->
-    <string name="read_song">朗诵</string>
-    <string name="read_brief">简介</string>
-    <string name="read_setting">设置</string>
-    <string name="read_download">缓存</string>'
-    <string name="read_category">目录</string>
-    <string name="read_no_chapter">第 %1$d 章(%2$d)</string>
-
-    <string name="read_aloud">朗读</string>
-    <string name="read_aloud_t">正在朗读</string>
-    <string name="read_aloud_s">点击打开阅读界面</string>
-    <string name="read_aloud_pause">朗读暂停</string>
-    <string name="read_aloud_timer">正在朗读(还剩%d分钟)</string>
-
-    <!--file system-->
-    <string name="file_sub_count">%1$d 项</string>
-    <string name="file_path">存储卡:%1$s</string>
-    <string name="file_add_shelf">加入书架</string>
-    <string name="file_add_shelves">加入书架(%1$d)</string>
-    <string name="file_add_succeed">成功添加%1$d本书</string>
-
-    <!--search-->
-    <string name="search_book_brief">%1$d人在追 | %2$s读者留存 | %3$s著</string>
-
-    <!--land-->
-    <string name="land_login">登陆</string>
-    <string name="land_register">注册</string>
-    <string name="land_forget">忘记密码?</string>
-    <string name="land_hint_name">请输入用户名</string>
-    <string name="land_hint_email">请输入注册邮箱</string>
-    <string name="land_hint_password">请输入密码</string>
-
-    <!--info-->
-    <string name="user_info_icon">头像</string>
-    <string name="user_info_username">用户名</string>
-    <string name="user_info_sex">性别</string>
-    <string name="user_info_phone">手机</string>
-    <string name="user_info_email">邮箱</string>
-    <string name="user_info_logout">退出</string>
 
 </resources>
