--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,12 +23,25 @@
         <item>@string/menu_action_delete</item>
         <item>@string/menu_action_batch</item>
     </string-array>
-
     <string-array name="menu_local_book">
         <item>@string/menu_action_top</item>
         <item>@string/menu_action_delete</item>
         <item>@string/menu_action_batch</item>
     </string-array>
+
+    <!--下载选择对话框-->
+    <string-array name="dialog_download">
+        <item>@string/dialog_download_item_1</item>
+        <item>@string/dialog_download_item_2</item>
+        <item>@string/dialog_download_item_3</item>
+        <item>@string/dialog_download_item_4</item>
+    </string-array>
+
+    <!--dialog-->
+    <string name="dialog_download_item_1">下载后面五十章</string>
+    <string name="dialog_download_item_2">下载前后五十章</string>
+    <string name="dialog_download_item_3">下载后面全部章</string>
+    <string name="dialog_download_item_4">下载本书所有章</string>
 
     <!--store-->
     <string name="store_node_nsrm">男生热门</string>
