新增主题书单

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,7 @@
     <string name="fragment_discover_sort">书籍分类</string>
 
     <!--book 书籍相关-->
-    <string name="book_sort_count">%s本</string>
+    <string name="book_count">共%s本</string>
 
     <!--dialog-->
     <string name="dialog_download_item_1">下载后面五十章</string>
